# app/cmd/http/router/router.go
@@ -6,6 +6,7 @@ import (
 
 	chi "github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+	"github.com/go-chi/cors"
 	"github.com/lucasti79/meli-interview/internal/factory"
 )
 
@@ -23,11 +24,24 @@ func (router *router) MapRoutes(appFactory *factory.AppFactory) http.Handler {
 		middleware.Heartbeat("/ping"),
 	)
 
+	r.Use(cors.Handler(cors.Options{
+		AllowedOrigins:   []string{"https://*", "http://*"}, // origens permitidas
+		AllowedMethods:   []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+		AllowedHeaders:   []string{"Accept", "Authorization", "Content-Type", "X-CSRF-Token"},
+		ExposedHeaders:   []string{"Link"},
+		AllowCredentials: true,
+		MaxAge:           300, // valor em segundos (cache do preflight request)
+	}))
+
 	r.Mount("/", buildDocsRoutes())
 
 	r.Route("/api/v1", func(rp chi.Router) {
 		rp.Route("/products", func(rp chi.Router) {
 			rp.Mount("/", buildProductsRoutes(appFactory.ProductHandler))
+		})
+
+		rp.Route("/categories", func(rp chi.Router) {
+			rp.Mount("/", buildCategoriesRoutes(appFactory.CategoryHandler))
 		})
 	})
 
