# app/internal/category/entity.go
@@ -1,0 +1,5 @@
+package category
+
+type Category struct {
+	Name string `json:"name"`
+}
